[project]
name = "webpoetre-lesson2"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "planck2909@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3,<3.0.0"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

